# ceneton-database-tools

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
ceneton_database_tools/: __main__.py  _cli.py  field_mappings.csv  fmp_reader.py  sql.py
database/: missing-transcripts.csv  transcripts.csv
notebooks/: download-mappings-http.yml  download-transcripts.ipynb
src/ceneton_database_utils/: __main__.py  _cli.py  fmp_reader.py  sql.py
