[tool.poetry]
name = "ceneton-database-utils"
version = "0.1.0"
description = "Tools and scripts for searching and filtering the ceneton database"
authors = ["Kaj Siebert <kaj@k-si.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ceneton_database_utils", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.2.1"
tqdm = "^4.67.1"
sqlalchemy = "^2.0.41"
lxml = "^5.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
pre-commit = "^4.2.0"

[tool.poetry.scripts]
ct-db = "ceneton_database_utils.__main__:cli"

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]  # E: pycodestyle, F: pyflakes, I: isort

[tool.ruff.format]
docstring-code-format = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



